# wala-wagdx

./: Cargo.toml  README.md  mockup 2.psd  mockup.psd
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy.yaml
app/: Cargo.toml  build.rs  index.html
app/src/: main.rs
core/: Cargo.toml  build.rs
core/resources/i18n/: i18n.json  i18n.json.bak
core/resources/icons/: icon-256.icns  maskable_icon_x512.icns
core/resources/psd/: mockup.psd
core/resources/spine/: waglayla cut.json
core/src/: app.rs  assets.rs  collection.rs  core.rs  error.rs  events.rs  fonts.rs  frame.rs  imports.rs  lib.rs  network.rs  node_state.rs  result.rs  settings.rs  storage.rs
core/src/components/: about.rs  blank.rs  bridge.rs  console.rs  donate.rs  focus.rs  footer.rs  hello.rs  layla.rs  mod.rs  network.rs  new_account.rs.dep  outline.rs  settings.rs  welcome.rs
core/src/components/bridge_ui/: mod.rs
core/src/components/settings/: mod.rs
core/src/components/wallet_ui/: create.rs  delegate.rs  export.rs  info_biscuit.rs  mod.rs  open.rs  overview.rs  request.rs  send.rs  sweep.rs  transactions.rs
core/src/dx_manager/: channel.rs  mod.rs  signal_handler.rs
core/src/dx_manager/services/: bridge.rs  mod.rs  peers.rs  stats.rs
core/src/dx_manager/services/waglayla/: config.rs  daemon.rs  mod.rs
core/src/dx_wallet/: account.rs  mod.rs  transaction.rs
core/src/gui/: animation.rs  frame.rs  hello.rs  icon.rs  mnemonic.rs  mod.rs  network.rs  pagination.rs  pane.rs  resize.rs
core/src/gui/theme/: color.rs  mod.rs  style.rs
core/src/gui/widgets/: alt_buttons.rs  confirm.rs  dx_buttons.rs  dx_image.rs  dx_spinner.rs  mod.rs  qr.rs  toggle_switch.rs  wala_coin.rs
core/src/interop/: adaptor.rs  client.rs  transport.rs
core/src/platform/: paths.rs
core/src/utils/: animation.rs  color.rs  dx_image.rs  enum_macros.rs  focus.rs  format.rs  get_public.rs  i18n.rs  key_input.rs  mass.rs  mod.rs  qr.rs  sound.rs  sync.rs  text.rs
scripts/: pubspec.yaml  translate.dart
scripts/.dart_tool/: package_config.json  package_config_subset
