[workspace]
resolver = "2"
members = [
    "app",
    "core",
    # "macros",
]
default-members = ["app"]

[workspace.package]
rust-version = "1.78.0"
version = "1.0.0-k9"
authors = ["WALA House"]
license = "GPL"
edition = "2021"
repository = "https://github.com/waglayla/wala-wagdx"

[workspace.dependencies]

wala-wagdx = { version = "1.0.0-k9", path = "app/", default-features = false }
wala-wagdx-core = { version = "1.0.0-k9", path = "core/", default-features = false }

# EGUI

egui = "0.29.1"
epaint = "0.29.1"
egui_extras = { version = "0.29.1", features = ["svg", "image", "serde"] }
eframe = { version = "0.29.1", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
  "persistence",
] }
egui-phosphor = { version = "0.7.3", features = ["thin", "light", "regular", "bold", "fill"] }
egui-notify = "0.17"

# WAGLAYLA-RUSTY

waglayla-addresses = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-alloc = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-bip32 = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-cli = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-consensus-core = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-core = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-metrics-core = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-notify = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-rpc-core = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-rpc-service = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-utils = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-wallet-core = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-wallet-keys = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-wrpc-client = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-wrpc-server = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglayla-txscript = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }
waglaylad = { git = "https://github.com/waglayla/waglaylad-rusty.git", branch = "master" }

# WORKFLOW-RS

workflow-core = "=0.12.1"
workflow-i18n = "=0.18.0"
workflow-chrome = "=0.12.1"
workflow-dom = "=0.12.1"
workflow-http = "=0.12.1"
workflow-log = "=0.12.1"
workflow-store = "=0.12.1"
workflow-wasm = "=0.12.1"

#--------------------------------------------

ahash = "0.8.6"
async-trait = "0.1.74"
borsh = { version = "=0.9.1", features = ["rc"] }
cfg-if = "1.0.0"
chrome-sys = "0.2.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
derivative = "2.2.0"
downcast = "0.11.0"
downcast-rs = "1.2.0"
env_logger = "0.10"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
js-sys = "0.3.67"
log = "0.4.20"
nix = { version = "0.28.0", features = ["signal"]}
num_cpus = "1.16.0"
open = "5.0.1"
pad = "0.1.6"
passwords = "3.1.16"
qrcode = { version = "0.12", features = ["svg"] }
rand = "0.8.5"
rfd = "0.14.1"
ritehash = "0.2.0"
rlimit = "0.10.1"
separator = "0.4.1"
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde_repr = "0.1.18"
serde-wasm-bindgen = "0.6.1"
slug = "0.1.5"
smallvec = { version = "1.11.1", features = ["serde"] }
sysinfo = "0.29.10"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread", "process"] }
tokio-stream = "0.1.14"
toml = "0.8.8"
walkdir = "2.4.0"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.70", features = ['Window'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
strum = "0.24"
strum_macros = "0.24"
sys-locale = "0.3"
num-format = "0.4"
seq-macro = "0.3.5"
once_cell = "1.8.0"
num-traits = "0.2"
num-derive = "0.3"
rodio = "0.17"

[profile.release]
opt-level = 'z'
lto = true

[profile.native-release]
inherits = "release"
strip = true

[profile.console]
inherits = "release"
strip = false

[build]
rustflags = ["-C", "target-feature=+crt-static"]