[package]
name = "wala-wagdx-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Core framework for WagDX"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
console = []
browser-extension = ["lean"]
mobile = ["lean"]
lean = []
cli = []
default = []
# default = ["browser-extension"]

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl", "rustc", "cargo"] }
static_vcruntime = "2.0"
git2 = "0.18"
anyhow = "1"

[dependencies]
waglayla-addresses.workspace = true
waglayla-bip32.workspace = true
waglayla-cli.workspace = true
waglayla-consensus-core.workspace = true
waglayla-core.workspace = true
waglayla-metrics-core.workspace = true
humantime.workspace = true
# wala-wagdx-macros.workspace = true
waglayla-notify.workspace = true
waglayla-rpc-core.workspace = true
waglayla-utils.workspace = true
waglayla-wallet-core.workspace = true
waglayla-wallet-keys.workspace = true
waglayla-wrpc-client.workspace = true
waglayla-txscript.workspace = true

workflow-core.workspace = true
workflow-i18n.workspace = true
workflow-dom.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-store.workspace = true
workflow-wasm.workspace = true
chrome-sys.workspace = true

rust-embed.workspace = true
ahash.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
derivative.workspace = true
downcast-rs.workspace = true
downcast.workspace = true
futures-util.workspace = true
futures.workspace = true
image.workspace = true
js-sys.workspace = true
log.workspace = true
pad.workspace = true
passwords.workspace = true
qrcode.workspace = true
rand.workspace = true
rfd.workspace = true
ritehash.workspace = true
separator.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
slug.workspace = true
smallvec.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true

strum.workspace = true
strum_macros.workspace = true

eframe.workspace = true
egui.workspace = true
epaint.workspace = true
egui_extras.workspace = true
chrono.workspace = true
egui-phosphor.workspace = true
egui-notify.workspace = true

sys-locale.workspace = true
num-format.workspace = true
seq-macro.workspace = true
once_cell.workspace = true

num-traits.workspace = true
num-derive.workspace = true

rodio.workspace = true

[dependencies.web-sys]
workspace = true
features = [
  'Document',
  'VisibilityState',
  'Window',
  'Element',
]


# -- native
[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
waglayla-core.workspace = true
waglayla-rpc-service.workspace = true
waglayla-wrpc-server.workspace = true
waglaylad.workspace = true
num_cpus.workspace = true
open.workspace = true
rlimit.workspace = true
sysinfo.workspace = true
tokio.workspace = true

# -- web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
